<package>
  <name>rgbdslam</name>
  <version>1.0.0</version>
  <description>This package can be used to register the point clouds from RGBD sensors such as the kinect or stereo cameras.
    The created world model can be saved as point cloud or integrated into an octomap.</description>
  <maintainer email="i.dont@know.com">Felix Endres</maintainer>
  <maintainer email="i.dont@know.com">Juergen Hess</maintainer>
  <maintainer email="i.dont@know.com">Nikolas Engelhard</maintainer>

  <license>GPL v3</license>

  <url type="website">http://ros.org/wiki/rgbdslam</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Felix Endres</author>
  <author>Juergen Hess</author>
  <author>Nikolas Engelhard</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>tf</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>tf</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>octomap_server</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>pcl</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rosbag</test_depend> -->
  <!-- <test_depend>pcl_ros</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>octomap_server</test_depend> -->
  <!-- <test_depend>octomap_ros</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->

<export>
    <rosdoc config="rosdoc.yaml"/>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    <cpp cflags="-I${prefix}/srv_gen/cpp"/>
</export>

</package>
